# CryLevelConvert

./: .gitignore  .gitmodules  CLCHeaders.h  CMakeLists.txt  CMake_AutoGen.bat  Converter.cpp  Converter.h  CryLevelConvert_v2.sln  CryLevelConvert_v2.vcxproj  CryLevelConvert_v2.vcxproj.filters  CryVersionDetect.cpp  CryVersionDetect.h  CustomFormatConverter.cpp  CustomFormatConverter.h  EntArchetypeObtainer.cpp  MissionConvert.cpp  MissionConvert.h  MissionConvert_Base.cpp  MissionConvert_Base.h  MissionConvert_CE3.cpp  MissionConvert_CE3.h  MissionConvert_CE5.cpp  MissionConvert_CE5.h  MovieDataConvert.h  README.md  TerrainLayerInfoConvert.cpp  Util.cpp  Util.h  VegetationDumpConvert.cpp  VegetationDumpConvert.h  VersionDB.clcdb  VersionDBFinal.clcdb  levelinfo.xml  main.cpp
.github/workflows/: cmake.yml
Converters/CustomFormat/: CustomFormatConverter.cpp  CustomFormatConverter.h  TerrainDatConvert.cpp  TerrainDatConvert.h  VegetationDumpConvert.cpp  VegetationDumpConvert.h
Converters/XML/: Converter.cpp  Converter.h  EntArchetypeObtainer.h  MissionConvert.cpp  MissionConvert.h  MovieDataConvert.cpp  TerrainLayerInfoConvert.cpp  TerrainLayerInfoConvert.h
Utils/: CLCHeaders.h  CryVersionDetect.cpp  CryVersionDetect.h  Util.cpp  Util.h
pugixml/scripts/: pugixml_vs2017_static.vcxproj
pugixml/scripts/vs2019/x64_DebugStatic/: pugixml.lib  pugixml_vs2017_static.vcxproj.FileListAbsolute.txt
pugixml/scripts/vs2019/x64_DebugStatic/pugixml_.07CF01C0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pugixml_vs2019_static.lastbuildstate
pugixml/scripts/vs2019/x64_ReleaseStatic/: pugixml.lib  pugixml_vs2017_static.vcxproj.FileListAbsolute.txt
pugixml/scripts/vs2019/x64_ReleaseStatic/pugixml_.07CF01C0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pugixml_vs2019_static.lastbuildstate
zippy/Zippy/: ZipArchive.hpp
zippy/Zippy/miniz/: miniz.h
